--- a/index_.html
+++ b/index_.html
@@ -25,15 +25,11 @@
 
   <h1 class="display-1 mt-5 text-center"><b>Liu Research Lab @Brown</b></h1>
     <br>
-    <h5 align="justify">Welcome. This research lab is led by Dr Liu Tao and consists of a group of young statisticians, 
-      computer scientists, and applied mathematicians. 
-      Our group focus on developing novel statistical 
-      methods with application to various scientific domains. 
-      Our current works are 
-      motivated by issues that arise when attempting to statistically model massive data sets.  
-      Our research interests include (not limited to) causal inference, statistical/machine learning, 
-      longitudinal/survival data, and optimal decision making.  As a group, we welcome investigators 
-      looking for interdisciplinary collaborations and students to join our team.
+    <h5 align="justify">Welcome.
+      This research lab is led by Dr. Liu Tao and consists of young statisticians, computer scientists, and applied mathematicians. 
+      Our lab focuses on developing novel quantitative methods to solve real-world scientific problems, with specific interests in addressing issues when attempting to statistically model complex data sets.  
+      Our research interests include causal inference, statistical/machine learning, longitudinal/survival analysis methods, data fusion, and optimal decision-making.  
+      As a group, we welcome investigators looking for interdisciplinary collaborations and students interested in data-driven statistical methods.
     </h5>
 </div>
 
