--- a/people.html
+++ b/people.html
@@ -43,7 +43,7 @@
                             <li>Optimal Decision Making</li>
                             <li>Longitudinal and Time-to-Event Modeling</li>
                         </ul>
-                        <a class="btn btn-outline-info btn-sm" href="#">CV</a>
+                        <a class="btn btn-outline-info btn-sm" href="files/CV_tliu2021.pdf">CV</a>
                         <a class="btn btn-outline-info btn-sm" href="https://scholar.google.com/citations?user=DaYfGu8AAAAJ&hl">Google Scholar</a> 
                     </p>
                 </div>
@@ -95,7 +95,7 @@
                 </div>
             </div>
 
-            <h3 class="bg-light mt-3">Former Students and Affiliated Alumni:</h3>
+            <h3 class="bg-light mt-3">Former Members and Affiliated Alumni:</h3>
             <div class="row">
                 
                 <div class="col-sm-3 p-3">
@@ -144,6 +144,13 @@
                     <h5>Max Bo</h5>
                     <p>The Blockstone Group</p>
                     <img class="img-thumbnail" src="./images/placeholder.png" 
+                    style="object-fit:fill; width:175px; height:175px"/> 
+                </div>
+
+                <div class="col-sm-3 p-3">
+                    <h5>Guangzheng Xu</h5>
+                    <p>U Warwick</p>
+                    <img class="img-thumbnail" src="./images/gXu.png" 
                     style="object-fit:fill; width:175px; height:175px"/> 
                 </div>
 
