--- a/headerFooter.html
+++ b/headerFooter.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container">
-      <a class="btn btn-primary" href="index_.html"">L. Lab >>></a>
+      <a class="btn btn-primary" href="#"">L. Lab >>></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -15,11 +15,11 @@
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">External Links</a>
                   <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#!">Brown Biostatistics</a>
+                      <a class="dropdown-item" href="https://www.brown.edu/academics/public-health/biostats/home">Brown Biostatistics</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#!">Brown Center for Statistical Sciences</a>
-                      <a class="dropdown-item" href="#!">Brown Data Science Initiative</a>
-                      <a class="dropdown-item" href="#!">Brown Center for Translational Research</a>
+                      <a class="dropdown-item" href="https://www.brown.edu/academics/public-health/css/">Brown Center for Statistical Sciences</a>
+                      <a class="dropdown-item" href="https://www.brown.edu/initiatives/data-science/home">Brown Data Science Initiative</a>
+                      <a class="dropdown-item" href="https://advancectr.brown.edu">Brown Center for Translational Research</a>
                   </div>
               </li>
           </ul>
