--- a/index.html
+++ b/index.html
@@ -1,4 +1,37 @@
 <!DOCTYPE html>
-<html>
-    Tao Liu's Website... Under development.
+<html lang="en">
+<head>
+  <title>Liu Research Lab @Brown</title>
+  <meta name="description" content="" />
+  <meta name="author" content="Tao Liu, PhD" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  <script> 
+      $(function(){
+        $("#header").load("headerFooter.html"); 
+      });
+  </script> 
+</head>
+
+<body style="height:1500px">
+  <div id="header"></div>
+
+<div class="container" style="margin-top:100px; margin-bottom:80px;">
+  <img src="images/brown1.png" alt style="width:100%" class="center"/>
+
+  <h1 class="display-1 mt-5 text-center"><b>Liu Research Lab @Brown</b></h1>
+    <br>
+    <h5 align="justify">Welcome.
+      This research lab is led by Dr. Liu Tao and consists of young statisticians, computer scientists, and applied mathematicians. 
+      Our lab focuses on developing novel quantitative methods to solve real-world scientific problems, with specific interests in addressing issues when attempting to statistically model complex data sets.  
+      Our research interests include causal inference, statistical/machine learning, longitudinal/survival analysis methods, data fusion, and optimal decision-making.  
+      As a group, we welcome investigators looking for interdisciplinary collaborations and students interested in data-driven statistical methods.
+    </h5>
+</div>
+
+</body>
 </html>
