--- a/news.html
+++ b/news.html
@@ -33,7 +33,7 @@
             <h2 class="mt-5 bg-light">
                 Kexin Qu accepted for poster presentation at the 3rd Annual Health Data Science Symposium 
             </h2>
-            <p align="justify"></p>
+            <p align="justify">
                 [October 28, 2021] <br> The 2021 Symposium has an overall theme on Personal Data Modeling around 
                 "<strong>Smartphones, Wearables, and Health</strong>" 
                 and will take place at Harvard in Boston on Nov 5th, 2021.  The poster is a joint work by Kexin Qu (PhD student), 
