--- a/headerFooter.html
+++ b/headerFooter.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container">
-      <a class="btn btn-primary" href="#"">L. Lab >>></a>
+      <a class="btn btn-primary" href="index.html"">L. Lab >>></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
       </button>
