--- a/research.html
+++ b/research.html
@@ -29,13 +29,7 @@
             Causal Effect Estimation and Transportation Using Modified Bootstrap Method
         </h2>
         <p align="justify">
-            In recent decades, big public databases become increasingly available and accessible, providing new opportunities for conducting empirical research into health, social, and economic relationships.  
-            Research on such databases however faces two major challenges. First, routine analyses typically reveals only associations instead of causal relationships due to the fact that (to serve broad research purposes) most public databases consist of "observational" data rather than being assembled with data from randomized, controlled conditions. Second, the population profile of public databases may not identical as the population of research interest. 
-            In this ongoing research project, we propose to a modified bootstrap method to jointly overcome these two challenges.
-            Specifically, we propose to incorporate two weights in the bootstrap resampling process, where one weight accounts for the selection process of exposures, and the other weight accounts for the "covariate" shifting between the data and research target populations. 
-            The modified bootstrap has several important properties: It is computationally easy; nearly all steps can be accomplished using existing programs/packages. The resulting inferences do not rely on the central limit theorem to be valid. Moreover, the analysis of bootstrapped samples can be augmented by imposing an outcome regression model to achieve double robustness.   
-            We provide theoretical justification of our proposed method. 
-
+            In recent decades, big public databases have become increasingly accessible, providing new opportunities for conducting empirical research into health, social, and economic relationships. Research on such databases, however, faces two major challenges. First, routine analyses typically reveal only associations instead of causal connections because (to serve general research purposes) most public databases consist of "observational" data rather than being assembled with data from randomized, controlled conditions. Second, public databases' population profiles may not be identical to the population of research interest. In this ongoing research project, we propose a modified bootstrap method to overcome these two challenges jointly. Specifically, we propose to incorporate two weights in the bootstrap resampling process. One weight accounts for the selection process of exposures, while the other accounts for the "covariate" shifting between the data and research target populations. The modified bootstrap has several important properties: It is computationally easy; nearly all steps can be accomplished using existing programs/packages. The resulting inferences do not rely on the central limit theorem to be valid. Moreover, the analysis of bootstrapped samples can be augmented by imposing an outcome regression model to achieve double robustness. We provide theoretical justifications for our proposed method.
         </p>
         <img src="images/BT_1.png" alt style="width:900px" class="center">
         <a class="btn btn-outline-info btn-sm" href="files/BT_Causalinf_notes.pdf">Slides</a>
@@ -55,9 +49,9 @@
             Assessing Risk for Viral Rebound in the Era of U=U using CNICS Data
         </h2>
         <p align="justify">
-            The “Undetectable = Untransmittable (U=U)” campaign started since 2016 and has created a paradigm shift in HIV public health messaging and prevention efforts. 
-            In this collaborative research study, we seek to identify risk factors for HIV viral rebound (i.e. failure of "U=U") among persons who started ART with subsequent established viral suppression. 
-            This study is conducted using the CNICS Data Repository which integrates comprehensive clinical data from outpatient and inpatient encounters including information on demographic characteristics, clinical and laboratory data, and medications
+            The "Undetectable = Untransmittable (U=U)" campaign started in 2016 and has created a paradigm shift in HIV public health messaging and prevention efforts. 
+            This collaborative research study seeks to identify risk factors for HIV viral rebound (i.e., failure of "U=U") among persons who started ART with subsequent established viral suppression. 
+            This study is conducted using the CNICS Data Repository, which integrates comprehensive clinical data from outpatient and inpatient encounters, including information on demographic characteristics, clinical and laboratory data, and medications.
         </p>
         <img src="images/UU.png" alt style="width:700px" class="center">
 
@@ -66,7 +60,7 @@
             Optimal Allocation of Gold Standard Testing Under Constrained Availability
         </h2>
         <p align="justify">
-            A tripartite classification algorithm is proposed in this research to address the question of when to make a decision and when we should wait to have more information before making a decision. The classification algorithm is motivated by the World Health Organization (WHO) guidelines for monitoring the effectiveness of human immunodeficiency virus (HIV) treatment in resource-limited settings. 
+            A tripartite classification algorithm is proposed in this research project to address the question of when to make a decision and when we should wait to have more information before making a decision. The classification algorithm is motivated by the World Health Organization (WHO) guidelines for monitoring the effectiveness of human immunodeficiency virus (HIV) treatment in resource-limited settings. 
             The guideline are mostly based on clinical and immunological markers (e.g., CD4 
             cell counts). Recent research indicates that the guidelines are inadequate and can result in high misclassification errors. 
             Viral load (VL) is considered the “gold standard,” yet its widespread use is limited by cost and infrastructure. 
