--- a/people.html
+++ b/people.html
@@ -25,7 +25,7 @@
             <div class="row mt-5">
                 <div class="col-sm-3 p-3">
                     <h5>Tao Liu, Ph.D.</h5>
-                    <img class="img-thumbnail" src="./images/Liu2.jpg" width="175"/> 
+                    <img class="img-thumbnail" src="./images/Liu1001.jpg" width="175"/> 
                 </div>
                 <div class="col-sm-9 p-3">
                     <p> Tao Liu is Associate Professor of Biostatistics at Brown University, and Director of Brown ARCH Data 
@@ -36,7 +36,8 @@
 
                         Dr Liu is Associate Editor of <em>Biostatistics & Epidemiology</em>, and Statistical Editor of 
                         <em>Circulation: Arrhythmia and Electrophysiology</em>, <em>New England Journal of Medicine (NEJM): Evidence</em>, 
-                        and <em>Chest</em>.  His research interests include: 
+                        and <em>Chest</em>.  
+                        His research interests include: 
                         <ul>
                             <li>Causal Inference</li>
                             <li>Risk Modeling</li>
